# Nodo

./: .clang-format  .clang-tidy  .clangd  .copilot-instructions.md  .editorconfig  .gitignore  .gitmodules  .vercelignore  404.html  BETA_RELEASE_CHECKLIST.md  BUILD.md  BUILD_WINDOWS.md  CLAUDE.md  CMakeLists.txt  CMakeUserPresets.json  CNAME  CONTRIBUTING copy 2.md  COVERAGE_REPORT.md  DATA_FLOW_SOP_ARCHITECTURE.md  DOCUMENTATION_AUDIT.md  FIRST_TESTER_GUIDE.md  GPU_ACCELERATION_COMPLETE.md  GPU_MESH_GENERATION_COMPLETE.md  LICENSE  LICENSING_STRATEGY.md  OPEN_SOURCE_PREP_TODO.md  PERFORMANCE_REPORT.md  PRE_RELEASE_TESTING_CHECKLIST.md  PROCEDURAL_NODE_SYSTEM_PLAN.md  QT_VIEWPORT_SETUP.md  README.md  ROADMAP.md  THIRD_PARTY_LICENSES.txt  UNIFIED_PROCEDURAL_ROADMAP.md  WEEK2_COMPLETE_STATUS.md  WEEK2_SOP_COMPLETE.md  ZOOM_TEST_GUIDE.md  agents.config.json  architecture_improvments_plan.md  benchmark_results.csv  (+17 more)
examples/: CMakeLists.txt  basic_union.cpp  bvh_boolean_demo.cpp  clean_architecture_demo.cpp  complete_node_system.cpp  debug_boolean.cpp  debug_mesh_generation.cpp  fixed_visual_node_editor.cpp  geometry_attributes_demo.cpp  gpu_accelerated_demo.cpp  gpu_complete_suite_test.cpp  gpu_compute_demo.cpp  gpu_mesh_generator_demo.cpp  gpu_performance_scaling_test.cpp  imnodes_visual_editor.cpp  json_graph_creation_demo.cpp  json_template_loader.cpp  mesh_validation_demo.cpp  node_graph_data_flow_demo.cpp  node_graph_editor_app.cpp  nodeflux_studio_mvp.cpp  performance_benchmark.cpp  primitive_boolean_test.cpp  primitive_generators.cpp  procedural_instancing_demo.cpp  real_time_renderer_demo.cpp  realtime_visualization_demo.cpp  simple_json_test.cpp  simple_node_editor.cpp  simple_sop_test.cpp  sop_header_demo.cpp  sop_material_demo.cpp  sop_procedural_demo.cpp  test_mesh_generation.cpp  torus_demo.cpp  visual_node_editor.cpp  week2_complete_sop_demo.cpp  week2_working_sop_demo.cpp  week3_advanced_sop_demo.cpp
examples/output/: README.md
nodeflux_core/: CMakeLists.txt
nodeflux_core/src/benchmarks/: benchmark_attributes.cpp  performance_benchmark.cpp
nodeflux_core/src/core/: attribute_descriptor.cpp  attribute_group.cpp  attribute_interpolation.cpp  attribute_promotion.cpp  attribute_set.cpp  element_topology.cpp  error.cpp  geometry_attributes.cpp  geometry_container.cpp
nodeflux_core/src/geometry/: boolean_ops.cpp  box_generator.cpp  cylinder_generator.cpp  mesh_generator.cpp  mesh_repairer.cpp  mesh_validator.cpp  plane_generator.cpp  sphere_generator.cpp  torus_generator.cpp
nodeflux_core/src/gpu/: gpu_mesh_generator.cpp
nodeflux_core/src/graph/: execution_engine.cpp  graph_serializer.cpp  node_graph.cpp
nodeflux_core/src/io/: obj_exporter.cpp  obj_importer.cpp
nodeflux_core/src/nodes/: sphere_node.cpp
nodeflux_core/src/sop/: array_sop.cpp  boolean_sop.cpp  copy_to_points_sop.cpp  delete_sop.cpp  extrude_sop.cpp  group_sop.cpp  laplacian_sop.cpp  line_sop.cpp  merge_sop.cpp  mirror_sop.cpp  noise_displacement_sop.cpp  normal_sop.cpp  polyextrude_sop.cpp  resample_sop.cpp  scale_sop.cpp  scatter_sop.cpp  sop_factory.cpp  subdivision_sop.cpp  transform_sop.cpp  uv_unwrap_sop.cpp  wrangle_sop.cpp
nodeflux_core/src/spatial/: bvh.cpp  enhanced_boolean_ops.cpp
nodeflux_studio/: CMakeLists.txt  resources.qrc
nodeflux_studio/src/: Command.cpp  Command.h  GeometrySpreadsheet.cpp  GeometrySpreadsheet.h  GeometryTableModel.cpp  GeometryTableModel.h  IconManager.cpp  IconManager.h  MainWindow.cpp  MainWindow.h  NodeCreationMenu.cpp  NodeCreationMenu.h  NodeGraphWidget.cpp  NodeGraphWidget.h  PropertyPanel.cpp  PropertyPanel.h  StatusBarWidget.cpp  StatusBarWidget.h  UndoStack.cpp  UndoStack.h  ViewportOverlay.cpp  ViewportWidget.cpp  ViewportWidget.h  main.cpp
nodo_cli/: CMakeLists.txt  README.md  main.cpp
nodo_core/: CMakeLists.txt
nodo_core/docs/: VEX_DSL_PLAN.md
nodo_core/include/nodo_core/: IHostInterface.h
nodo_core/src/: IHostInterface.cpp
nodo_core/src/benchmark/: performance_benchmark.cpp
nodo_core/src/benchmarks/: benchmark_attributes.cpp  benchmark_geometry.cpp  performance_benchmark.cpp
nodo_core/src/core/: attribute_descriptor.cpp  attribute_group.cpp  (+9 more)
nodo_studio/: CMakeLists.txt  resources.qrc
nodo_studio/include/: StudioHostInterface.h
nodo_studio/src/: Command.cpp  Command.h  GeometrySpreadsheet.cpp  GeometrySpreadsheet.h  GeometryTableModel.cpp  GeometryTableModel.h  GraphParametersPanel.cpp  GraphParametersPanel.h  IconManager.cpp  IconManager.h  KeyboardShortcutsDialog.cpp  KeyboardShortcutsDialog.h  MainWindow.cpp  MainWindow.h  MenuManager.cpp  MenuManager.h  NodeCreationMenu.cpp  NodeCreationMenu.h  NodeGraphWidget.cpp  NodeGraphWidget.h  NodoDocument.cpp  NodoDocument.h  ParameterWidgetFactory.cpp  ParameterWidgetFactory.h  PropertyPanel.cpp  PropertyPanel.h  SceneFileManager.cpp  SceneFileManager.h  StatusBarWidget.cpp  StatusBarWidget.h  StudioHostInterface.cpp  StudioHostInterface.h  UndoStack.cpp  UndoStack.h  ViewportOverlay.cpp  ViewportOverlay.h  ViewportToolbar.cpp  ViewportToolbar.h  ViewportWidget.cpp  ViewportWidget.h  (+1 more)
tests/: CMakeLists.txt  debug_boolean.cpp  show_obj_output.cpp  test_array_sop.cpp  test_attribute_group.cpp  test_attribute_interpolation.cpp  test_attribute_promotion.cpp  test_attribute_storage.cpp  test_attribute_system_integration.cpp  test_attribute_types.cpp  test_bevel_sop.cpp  test_boolean_ops.cpp  test_boolean_sop.cpp  test_bvh.cpp  test_ch_references.cpp  test_delete_sop.cpp  test_element_topology.cpp  test_execution_engine_bridge.cpp  test_expression_evaluator.cpp  test_expression_validator.cpp  test_extrude_sop.cpp  test_geometry_container.cpp  test_geometry_handle.cpp  test_graph_serialization.cpp  test_host_interface.cpp  test_math.cpp  test_mesh.cpp  test_mesh_generator.cpp  test_mesh_repairer.cpp  test_mesh_validator.cpp  test_node_naming.cpp  test_nodes.cpp  test_noise_displacement.cpp  test_obj_export.cpp  test_pmp_converter.cpp  test_polyextrude_edges.cpp  test_polyextrude_group_filtering.cpp  test_scale_sop.cpp  test_selective_execution.cpp  test_sop_group_filtering.cpp  (+3 more)
(+612 files in other folders)
