# Examples

add_executable(basic_union basic_union.cpp)
target_link_libraries(basic_union nodeflux_core)

add_executable(debug_boolean debug_boolean.cpp)
target_link_libraries(debug_boolean nodeflux_core)

add_executable(primitive_generators primitive_generators.cpp)
target_link_libraries(primitive_generators nodeflux_core)

add_executable(primitive_boolean_test primitive_boolean_test.cpp)
target_link_libraries(primitive_boolean_test nodeflux_core)

add_executable(complete_node_system complete_node_system.cpp)
target_link_libraries(complete_node_system nodeflux_core)

add_executable(mesh_validation_demo mesh_validation_demo.cpp)
target_link_libraries(mesh_validation_demo nodeflux_core)

add_executable(torus_demo torus_demo.cpp)
target_link_libraries(torus_demo nodeflux_core)
