# Examples

add_executable(basic_union basic_union.cpp)
target_link_libraries(basic_union nodeflux_core)

add_executable(debug_boolean debug_boolean.cpp)
target_link_libraries(debug_boolean nodeflux_core)

add_executable(primitive_generators primitive_generators.cpp)
target_link_libraries(primitive_generators nodeflux_core)

add_executable(primitive_boolean_test primitive_boolean_test.cpp)
target_link_libraries(primitive_boolean_test nodeflux_core)

add_executable(complete_node_system complete_node_system.cpp)
target_link_libraries(complete_node_system nodeflux_core)

add_executable(mesh_validation_demo mesh_validation_demo.cpp)
target_link_libraries(mesh_validation_demo nodeflux_core)

add_executable(torus_demo torus_demo.cpp)
target_link_libraries(torus_demo nodeflux_core)

add_executable(bvh_boolean_demo bvh_boolean_demo.cpp)
target_link_libraries(bvh_boolean_demo nodeflux_core)

add_executable(performance_benchmark performance_benchmark.cpp)
target_link_libraries(performance_benchmark nodeflux_core)

add_executable(test_mesh_generation test_mesh_generation.cpp)
target_link_libraries(test_mesh_generation nodeflux_core)

add_executable(gpu_compute_demo gpu_compute_demo.cpp)
target_link_libraries(gpu_compute_demo nodeflux_core)

add_executable(gpu_accelerated_demo gpu_accelerated_demo.cpp)
target_link_libraries(gpu_accelerated_demo nodeflux_core)
